# hf_cleaner

./: README.md  app.py  pyproject.toml  setup.py  tests.py
hf_cleaner/model_profiler/: metrics.py
hf_cleaner/templates/: DashboardTemplate.py
hf_cleaner/utils/: constants.py  file_utils.py
