[tool.poetry]
name = "hf_cleaner"
version = "0.1.0"
description = ""
authors = ["harsimarsingh <sainiharsimar@gmail.com>"]
readme = "README.md"
liscence = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["hugging_face", "cleanup", "utility"]
packages = [
    {include = "hf_cleaner"}
]

[project.urls]
Homepage = "https://github.com/HarsimarSingh23/hf_cleaner"
Issues = "https://github.com/HarsimarSingh23/hf_cleaner/issues"


include = [
    "app.py",
    "run_app.py"
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.0"

[tool.poetry.scripts]
hf_cleaner = "run_app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

